frontend/test/should_fail/enum_013.grg
using attrib_model_001, enum_model_007;

rule r {
	x: NFLOAT;

	modify {
		eval {
			x.a = ee::a + 42.0;
		}
	}
}



